LoginControllerTest : no modules